// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application component should render alert if user is not fez author 1`] = `
<div
  className="layout-fill align-stretch"
>
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        style={
          Object {
            "marginTop": "-10px",
          }
        }
      >
        <AuthButton
          hoveredStyle={
            Object {
              "backgroundColor": "rgba(0,0,0,0.3)",
              "borderRadius": "50%",
            }
          }
          isAuthorizedUser={true}
          onClick={[Function]}
          signInTooltipText="Log in"
          signOutTooltipText="Log out - undefined"
        />
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonTouchTap={[Function]}
    showMenuIconButton={true}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoText="UQ eSpace "
    menuItems={
      Array [
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_data_claimed.php",
          "primaryText": "My research data collections",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing record",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing data collection",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/uqauthor1",
          "primaryText": "Author statistics",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_claimed.php",
          "primaryText": "Switch to old interface",
          "public": true,
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <div
      className="layout-fill dashAlert"
    >
      <div
        className="layout-card"
      >
        <Alert
          allowDismiss={false}
          dismissTitle="Click to dismiss this alert"
          message="Please contact the UQ eSpace administrator to resolve this."
          showLoader={false}
          title="You are not registered in UQ eSpace as an author"
          type="info_outline"
        />
      </div>
    </div>
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        path="/rhdsubmission_new"
        render={[Function]}
      />
      <Route
        key="route_1"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_2"
        path="/"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_3"
        path="/dashboard"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_4"
        path="/records/mine"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_5"
        path="/records/possible"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_6"
        path="/records/claim"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_7"
        path="/records/:pid(UQ:\\\\d+)/fix"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_8"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_11"
        path="/author-identifiers/orcid/link"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_12"
        path="/author-identifiers/google-scholar/link"
        render={[Function]}
      />
      <Route
        key="route_13"
        path="/contact"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_14"
        path="/records/:pid(UQ:\\\\d+)"
        render={[Function]}
      />
      <Route
        key="route_15"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for HDR with ORCID ID 1`] = `
<div
  className="layout-fill align-stretch"
>
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        style={
          Object {
            "marginTop": "-10px",
          }
        }
      >
        <AuthButton
          hoveredStyle={
            Object {
              "backgroundColor": "rgba(0,0,0,0.3)",
              "borderRadius": "50%",
            }
          }
          isAuthorizedUser={true}
          onClick={[Function]}
          signInTooltipText="Log in"
          signOutTooltipText="Log out - undefined"
        />
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonTouchTap={[Function]}
    showMenuIconButton={true}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoText="UQ eSpace "
    menuItems={
      Array [
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_data_claimed.php",
          "primaryText": "My research data collections",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing record",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing data collection",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/uqauthor1",
          "primaryText": "Author statistics",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_claimed.php",
          "primaryText": "Switch to old interface",
          "public": true,
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        path="/rhdsubmission_new"
        render={[Function]}
      />
      <Route
        key="route_1"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_2"
        path="/"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_3"
        path="/dashboard"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_4"
        path="/records/mine"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_5"
        path="/records/possible"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_6"
        path="/records/claim"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_7"
        path="/records/:pid(UQ:\\\\d+)/fix"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_8"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_11"
        path="/author-identifiers/orcid/link"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_12"
        path="/author-identifiers/google-scholar/link"
        render={[Function]}
      />
      <Route
        key="route_13"
        path="/contact"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_14"
        path="/records/:pid(UQ:\\\\d+)"
        render={[Function]}
      />
      <Route
        key="route_15"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for HDR without ORCID ID 1`] = `
<div
  className="layout-fill align-stretch"
>
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        style={
          Object {
            "marginTop": "-10px",
          }
        }
      >
        <AuthButton
          hoveredStyle={
            Object {
              "backgroundColor": "rgba(0,0,0,0.3)",
              "borderRadius": "50%",
            }
          }
          isAuthorizedUser={true}
          onClick={[Function]}
          signInTooltipText="Log in"
          signOutTooltipText="Log out - undefined"
        />
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonTouchTap={[Function]}
    showMenuIconButton={true}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoText="UQ eSpace "
    menuItems={
      Array [
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_claimed.php",
          "primaryText": "Switch to old interface",
          "public": true,
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <div
      className="layout-fill dashAlert"
    >
      <div
        className="layout-card"
      >
        <Alert
          allowDismiss={false}
          dismissTitle="Click to dismiss this alert"
          message="Before you can start using UQ eSpace you have to link your UQ eSpace profile to your ORCID ID."
          showLoader={false}
          title="ORCID ID REQUIRED"
          type="error_outline"
        />
      </div>
    </div>
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        path="/contact"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_1"
        path="/records/:pid(UQ:\\\\d+)"
        render={[Function]}
      />
      <Route
        key="route_2"
        path="/rhdsubmission_new"
        render={[Function]}
      />
      <Route
        key="route_3"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        key="route_4"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for account with fez author with ORCID ID 1`] = `
<div
  className="layout-fill align-stretch"
>
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        style={
          Object {
            "marginTop": "-10px",
          }
        }
      >
        <AuthButton
          hoveredStyle={
            Object {
              "backgroundColor": "rgba(0,0,0,0.3)",
              "borderRadius": "50%",
            }
          }
          isAuthorizedUser={true}
          onClick={[Function]}
          signInTooltipText="Log in"
          signOutTooltipText="Log out - undefined"
        />
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonTouchTap={[Function]}
    showMenuIconButton={true}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoText="UQ eSpace "
    menuItems={
      Array [
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_data_claimed.php",
          "primaryText": "My research data collections",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing record",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing data collection",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/uqauthor1",
          "primaryText": "Author statistics",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_claimed.php",
          "primaryText": "Switch to old interface",
          "public": true,
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        path="/rhdsubmission_new"
        render={[Function]}
      />
      <Route
        key="route_1"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_2"
        path="/"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_3"
        path="/dashboard"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_4"
        path="/records/mine"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_5"
        path="/records/possible"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_6"
        path="/records/claim"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_7"
        path="/records/:pid(UQ:\\\\d+)/fix"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_8"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_11"
        path="/author-identifiers/orcid/link"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_12"
        path="/author-identifiers/google-scholar/link"
        render={[Function]}
      />
      <Route
        key="route_13"
        path="/contact"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_14"
        path="/records/:pid(UQ:\\\\d+)"
        render={[Function]}
      />
      <Route
        key="route_15"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for account with fez author without ORCID ID 1`] = `
<div
  className="layout-fill align-stretch"
>
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        style={
          Object {
            "marginTop": "-10px",
          }
        }
      >
        <AuthButton
          hoveredStyle={
            Object {
              "backgroundColor": "rgba(0,0,0,0.3)",
              "borderRadius": "50%",
            }
          }
          isAuthorizedUser={true}
          onClick={[Function]}
          signInTooltipText="Log in"
          signOutTooltipText="Log out - undefined"
        />
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonTouchTap={[Function]}
    showMenuIconButton={true}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoText="UQ eSpace "
    menuItems={
      Array [
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_data_claimed.php",
          "primaryText": "My research data collections",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing record",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing data collection",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/uqauthor1",
          "primaryText": "Author statistics",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_claimed.php",
          "primaryText": "Switch to old interface",
          "public": true,
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <div
      className="layout-fill dashAlert"
    >
      <div
        className="layout-card"
      >
        <Alert
          action={[Function]}
          actionButtonLabel="Click here to link or register"
          allowDismiss={false}
          dismissTitle="Click to dismiss this alert"
          message="You do not have an ORCID ID linked to your UQ eSpace."
          showLoader={false}
          title="ORCID ID REQUIRED"
          type="warning"
        />
      </div>
    </div>
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        path="/rhdsubmission_new"
        render={[Function]}
      />
      <Route
        key="route_1"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_2"
        path="/"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_3"
        path="/dashboard"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_4"
        path="/records/mine"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_5"
        path="/records/possible"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_6"
        path="/records/claim"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_7"
        path="/records/:pid(UQ:\\\\d+)/fix"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_8"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_11"
        path="/author-identifiers/orcid/link"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_12"
        path="/author-identifiers/google-scholar/link"
        render={[Function]}
      />
      <Route
        key="route_13"
        path="/contact"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_14"
        path="/records/:pid(UQ:\\\\d+)"
        render={[Function]}
      />
      <Route
        key="route_15"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for account with fez author without ORCID ID should not display ORCID warning on thesis submission page 1`] = `
<div
  className="layout-fill align-stretch"
>
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        style={
          Object {
            "marginTop": "-10px",
          }
        }
      >
        <AuthButton
          hoveredStyle={
            Object {
              "backgroundColor": "rgba(0,0,0,0.3)",
              "borderRadius": "50%",
            }
          }
          isAuthorizedUser={true}
          onClick={[Function]}
          signInTooltipText="Log in"
          signOutTooltipText="Log out - undefined"
        />
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonTouchTap={[Function]}
    showMenuIconButton={false}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        path="/rhdsubmission_new"
        render={[Function]}
      />
      <Route
        key="route_1"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_2"
        path="/"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_3"
        path="/dashboard"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_4"
        path="/records/mine"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_5"
        path="/records/possible"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_6"
        path="/records/claim"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_7"
        path="/records/:pid(UQ:\\\\d+)/fix"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_8"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_11"
        path="/author-identifiers/orcid/link"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_12"
        path="/author-identifiers/google-scholar/link"
        render={[Function]}
      />
      <Route
        key="route_13"
        path="/contact"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_14"
        path="/records/:pid(UQ:\\\\d+)"
        render={[Function]}
      />
      <Route
        key="route_15"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render application with routing for the user and display loading screen while loading author 1`] = `
<div
  className="layout-fill align-stretch"
>
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        style={
          Object {
            "marginTop": "-10px",
          }
        }
      >
        <AuthButton
          hoveredStyle={
            Object {
              "backgroundColor": "rgba(0,0,0,0.3)",
              "borderRadius": "50%",
            }
          }
          isAuthorizedUser={true}
          onClick={[Function]}
          signInTooltipText="Log in"
          signOutTooltipText="Log out - undefined"
        />
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonTouchTap={[Function]}
    showMenuIconButton={true}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoText="UQ eSpace "
    menuItems={
      Array [
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_data_claimed.php",
          "primaryText": "My research data collections",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing record",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing data collection",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/uqauthor1",
          "primaryText": "Author statistics",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_claimed.php",
          "primaryText": "Switch to old interface",
          "public": true,
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <Connect(AppAlert) />
    <div
      className="isLoading is-centered"
    >
      <InlineLoader
        message="Loading user account..."
      />
    </div>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render for anon user 1`] = `
<div
  className="layout-fill align-stretch"
>
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        style={
          Object {
            "marginTop": "-10px",
          }
        }
      >
        <AuthButton
          hoveredStyle={
            Object {
              "backgroundColor": "rgba(0,0,0,0.3)",
              "borderRadius": "50%",
            }
          }
          isAuthorizedUser={false}
          onClick={[Function]}
          signInTooltipText="Log in"
          signOutTooltipText=""
        />
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonTouchTap={[Function]}
    showMenuIconButton={true}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoText="UQ eSpace "
    menuItems={
      Array [
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_claimed.php",
          "primaryText": "Switch to old interface",
          "public": true,
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <div
      className="layout-fill dashAlert"
    >
      <div
        className="layout-card"
      >
        <Alert
          action={[Function]}
          actionButtonLabel="Click to login"
          allowDismiss={false}
          dismissTitle="Click to dismiss this alert"
          message="Login to UQ eSpace for full search results and more services."
          showLoader={false}
          title="You are not logged in"
          type="info_outline"
        />
      </div>
    </div>
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        path="/contact"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_1"
        path="/records/:pid(UQ:\\\\d+)"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_2"
        path="/"
        render={[Function]}
      />
      <Route
        key="route_3"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render loading screen while account is loading 1`] = `
<div
  className="layout-fill"
>
  <AppLoader
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoText="UQ eSpace "
    progressColor="#FFF"
    title="UQ eSpace "
  />
</div>
`;

exports[`Application component should render thesis submission for HDR without menu 1`] = `
<div
  className="layout-fill align-stretch"
>
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        style={
          Object {
            "marginTop": "-10px",
          }
        }
      >
        <AuthButton
          hoveredStyle={
            Object {
              "backgroundColor": "rgba(0,0,0,0.3)",
              "borderRadius": "50%",
            }
          }
          isAuthorizedUser={true}
          onClick={[Function]}
          signInTooltipText="Log in"
          signOutTooltipText="Log out - undefined"
        />
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonTouchTap={[Function]}
    showMenuIconButton={false}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        path="/contact"
        render={[Function]}
      />
      <Route
        exact={true}
        key="route_1"
        path="/records/:pid(UQ:\\\\d+)"
        render={[Function]}
      />
      <Route
        key="route_2"
        path="/rhdsubmission_new"
        render={[Function]}
      />
      <Route
        key="route_3"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        key="route_4"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;
